Добавил еще логин, а то сразу не увидел

--- a/3 четверть/Spring/Spring-shop/shop-admin-ui/src/main/resources/templates/login.html
+++ b/3 четверть/Spring/Spring-shop/shop-admin-ui/src/main/resources/templates/login.html
@@ -23,14 +23,14 @@
                             <div class="input-group-prepend">
                                 <span class="input-group-text"><i class="fa fa-user"></i></span>
                             </div>
-                            <input type="text" class="form-control" name="username" placeholder="Username">
+                            <input id="inp-username" type="text" class="form-control" name="username" placeholder="Username">
                         </div>
 
                         <div class="input-group mb-3">
                             <div class="input-group-prepend">
                                 <span class="input-group-text"><i class="fa fa-key"></i></span>
                             </div>
-                            <input type="password" class="form-control" name="password" placeholder="Password">
+                            <input id="inp-password" type="password" class="form-control" name="password" placeholder="Password">
                         </div>
 
                         <div class="form-check mb-3">
@@ -42,7 +42,7 @@
 
                         <div class="row">
                             <div class="col pr-2">
-                                <button type="submit" class="btn btn-block btn-primary">Login</button>
+                                <button id="btn-login" type="submit" class="btn btn-block btn-primary">Login</button>
                             </div>
                             <div class="col pl-2">
                                 <a class="btn btn-block btn-link" href="#">Forgot Password</a>
