--- a/3 четверть/Spring/Spring-shop/shop-admin-ui/src/main/resources/templates/role_form.html
+++ b/3 четверть/Spring/Spring-shop/shop-admin-ui/src/main/resources/templates/role_form.html
@@ -24,14 +24,14 @@
                 <div class="card-body">
                     <input th:type="hidden" th:field="*{id}">
                     <div class="form-group">
-                        <label for="name">Brand name</label>
+                        <label for="name">Role name</label>
                         <input th:field="*{name}" type="text" class="form-control" id="name"
                                placeholder="Enter brand name" required>
                     </div>
                 </div>
 
                 <div class="card-footer bg-white">
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button id="role_create" type="submit" class="btn btn-primary">Submit</button>
                 </div>
             </div>
         </form>
