--- a/3 четверть/Spring/Spring-shop/shop-admin-ui/src/main/resources/templates/roles.html
+++ b/3 четверть/Spring/Spring-shop/shop-admin-ui/src/main/resources/templates/roles.html
@@ -12,16 +12,16 @@
     <div th:replace="fragments/sidebar :: sidebar"></div>
 
     <div class="content p-4">
-        <h2 class="mb-4">Brands list</h2>
+        <h2 class="mb-4">Roles list</h2>
 
         <div class="card mb-4">
 
             <div class="card-body">
                 <form class="form-group" th:action="@{/role/create}">
-                    <button type="submit" class="btn btn-primary">Create new</button>
+                    <button id="new_role" type="submit" class="btn btn-primary">Create new</button>
                 </form>
 
-                <table id="brands" class="table table-hover" cellspacing="0" width="100%">
+                <table id="roles" class="table table-hover" cellspacing="0" width="100%">
                     <thead>
                     <tr>
                         <th>Id</th>
